<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroids</string>
    <string name="action_settings">Settings</string>
    <string name="action_play">Play</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="about">This program has been developed by Javi to play in the free time</string>
    <string name="music_switch_summary">Background Music</string>
    <string name="music_switch_title">Play Music</string>
    <string name="graphics_title">Graphic Types</string>
    <string name="fragments_summary">Number of asteroid fragments</string>
    <string name="fragments_title">Fragments number</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="multiplayer_pref_title">Multiplayer Mode</string>
    <string name="multiplayer_switch">Switch Multiplayer Mode</string>
    <string name="multiplayer_switch_summary">ON/OFF multiplayer mode</string>
    <string name="multiplayer_max_players">Máximun Number Of Players</string>
    <string name="multiplayer_max_players_summary">Set the máximun number of players</string>
    <string name="connection_type_title">Connection Type</string>
    <string name="ranking_action">Ranking</string>
    <string name="title_activity_rank">Rank</string>
	<string name="noRanks">No Ranks</string>
</resources>