<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="main_preferences" >

    <CheckBoxPreference
        android:key="music_switch"
        android:summary="@string/music_switch_summary"
        android:title="@string/music_switch_title" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/graphic_types"
        android:entryValues="@array/graphic_types_values"
        android:key="graphics"
        android:title="@string/graphics_title" />

    <EditTextPreference
        android:defaultValue="3"
        android:key="fragments"
        android:summary="@string/fragments_summary"
        android:title="@string/fragments_title" />

    <PreferenceCategory android:title="@string/multiplayer_pref_title" >
        <CheckBoxPreference
            android:key="multiplayer_switch"
            android:summary="@string/multiplayer_switch_summary"
            android:title="@string/multiplayer_switch" />

        <EditTextPreference
            android:defaultValue="2"
            android:key="multiplayer_max_players"
            android:summary="@string/multiplayer_max_players_summary"
            android:title="@string/multiplayer_max_players" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/connection_types"
            android:entryValues="@array/connection_types_values"
            android:key="connection_type"
            android:title="@string/connection_type_title" />
    </PreferenceCategory>

</PreferenceScreen>